# ros2-ota-firmware-updates

./: .gitallowed  .gitignore  README.md
cleanup/: undo-associate-client-devices.sh  undo-deployment.sh  undo-greengrass-entrypoint.sh  undo-setup-device-thing.sh  undo-start.sh
containers/: .gitignore  associate-client-devices.sh  check-gg-service-role.sh  compose.yaml  manual-steps.md  setup-device-thing.sh  start.sh
containers/device/: Dockerfile  docker-daemon.json  entrypoint.sh
containers/device/agent/: agent.py  discover_gg_connection.py  job_handler.py
containers/greengrass/: Dockerfile  check_deployment.py  deployment-template.json  env  greengrass-entrypoint.sh
containers/policies/: device-iot-policy.json
containers/ros-image-v1/: Dockerfile  README.md  build.sh
containers/ros-image-v1/agent/: build.sh  entrypoint.sh
containers/ros-image-v1/config/: .gitignore  iot_config_template.json
containers/ros-image-v1/ws/src/service/: package.xml  setup.cfg  setup.py
containers/ros-image-v1/ws/src/service/service/: connection_helper.py  service.py
deploy/: cdk.json  package-lock.json  package.json
deploy/lambda/iotJobUpdateFunction/: index.py  requirements.txt
deploy/lib/: deploy-stack.ts  iotJobRuleConstruct.ts
jobs/: deploy_job.py
